--- a/css/style.css
+++ b/css/style.css
@@ -2,18 +2,30 @@
   max-width: 1920px;
   max-width: 100%;
   margin: 0 auto;
-  border: 3px solid red;
+  /* border: 3px solid red; */
+  padding-top: 128px;
+  
+ 
 }
 
 /* header */
 header {
   max-width: inherit;
   width: inherit;
-  transform: translateX(-50%, -50%);
+  width: 100%;
+  margin: 0 auto;
+  height: 130px;
   background-color: #262626;
-  padding: 46px 327px 47.43px 320px;
+  padding-inline: 327px 320px;
   display: flex;
   justify-content: space-between;
+  align-items: center;
+  position: fixed;
+  top: 0;
+  left: 50%;
+  transform: translateX(-50%);
+  z-index: 1;
+ 
 
 }
 
@@ -38,8 +50,94 @@ ul li a {
 
 .fa-bag-shopping {
   color: white;
-  height: 36.57143020629883px;
-  font-size: 32px;  
+  height: 36.57;
+  font-size: 32px;
 
+
+}
+
+/* section1 */
+
+.section1 {
+  height: 1080px;
+  position: relative;
+  /* border: 2px solid green; */
+}
+
+.section1_image {
+  width: 100%;
+  height: 100%;
+  
+}
+
+.div_heading_box {
+  width: 1128px;
+  height: 500px;
+  position: absolute;
+  top: 242px;
+  transform: translateX(35%);
+  /* border: 2px solid red; */
+  
+  
+}
+
+.div_heading_box h2 {
+  font-family: 'Work Sans';
+  font-style: normal;
+  font-weight: 700;
+  font-size: 82px;
+  line-height: 96px;
+  text-align: center;
+  color: white;
+}
+
+
+.section1_paragraph {
+  font-family: 'Work Sans';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 24px;
+  line-height: 150%;
+  text-align: center;
+  color: white;
+  margin-top: 130px;
+  /* background-color: green; */
+  width: 583px;
+  margin-inline: auto;
+  margin-bottom: 23.25px;
+  
+}
+
+.search_box {
+  width: 463px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 12px 30px;
+  background: rgba(255, 255, 255, 0.2);
+  border: 1px solid #FFFFFF;
+  border-radius: 50px;
+  backdrop-filter: blur(10px);
+  margin-inline: auto;
+
+}
+
+.search_box_title {
+  color: white;
+  font-family: 'Work Sans';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 20px;
+  line-height: 23px;
+
+}
+
+
+.fa-magnifying-glass {
+  background-color: #525A55;
+  color: white;
+  font-size: 20px;
+  padding: 15px;
+  border-radius: 50%;
 
 }
