--- a/css/style.css
+++ b/css/style.css
@@ -76,10 +76,9 @@ ul li a {
   position: absolute;
   top: 242px;
   transform: translateX(35%);
-  /* border: 2px solid red; */
-  
-  
+  /* border: 2px solid red; */  
 }
+
 
 .div_heading_box h2 {
   font-family: 'Work Sans';
@@ -214,4 +213,56 @@ letter-spacing: -0.05em;
   height: 19px;
 }
 
+/* section3 */
+.section3 {
+  width: 70%;
+  margin-inline: auto;
+  margin-bottom: 245px;
+
+}
+
+.div_box_cards2 {
+  width: 1280px;
+  display: flex;
+  justify-content: space-between;
+  /* border: 2px solid red; */
+  gap: 20px;
+}
+
+.card_livingroom {
+  width: 60%;
+  position: relative;
+  /* border: 2px solid green; */
+}
+
+.living_room_photo {
+  width: 100%;
+  height: 645px;
+}
+
+
+.living_room_text {
+  position: absolute;
+  top: 285px;
+  left: 194px;
+  font-family: 'Work Sans';
+  font-style: normal;
+  font-weight: 600;
+  font-size: 64px;
+  line-height: 75px;
+  color: #DCB47A;
+}
+
+.card_livingroom2 {
+  /* border: 2px solid yellow; */
+  width: 40%;
+  display: flex;
+  flex-wrap: wrap;
+  row-gap: 25px;
+}
+
+.living_room_photo2 {
+  width: 100%;
+  height: 310px;
+}
 
