--- a/css/style.css
+++ b/css/style.css
@@ -46,6 +46,7 @@ ul li a {
   line-height: 28px;
   text-align: center;
   color: white;
+  cursor: pointer;
 }
 
 .fa-bag-shopping {
@@ -265,4 +266,61 @@ letter-spacing: -0.05em;
   width: 100%;
   height: 310px;
 }
+
+ footer {
+  
+  background-color: #262626;
+  padding-top: 60px;
+  padding-bottom: 60px;
+ }
+
+ .footer_heading {
+  color: white;
+  font-family: 'Work Sans';
+  font-style: normal;
+  font-weight: 600;
+  font-size: 60px;
+  line-height: 70px;
+  text-align: center;
+  margin-bottom: 49px;
+ }
+
+  span {
+    color: #DCB47A;
+  }
+
+
+  .footer_paragarph {
+ color: rgba(255, 255, 255, 0.8);
+  font-family: 'Work Sans';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 20px;
+  line-height: 130%;
+  text-align: center;
+  margin-bottom: 49px;
+  }
+
+  .div_button {
+    display: flex;
+    justify-content: center;
+    
+  }
+
+  .view_now_button {
+    padding: 21.71px 60.07px 22.29px 60.93px;
+    border-radius: 60px;
+    border-style: none;
+    background-color: #DCB47A;
+    font-family: 'Work Sans';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 16px;
+    line-height: 120%;
+    text-align: center;
+    text-transform: capitalize;
+    color: white;
+    cursor: pointer;
+  
+  }
 
